--- a/src/main/resources/log4j2.component.properties
+++ b/src/main/resources/log4j2.component.properties
@@ -1,1 +1,3 @@
+# 当配置AsyncLoggerContextSelector作为全局异步日志时，请确保在配置中使用普通的 <root>和<logger>元素。
+# AsyncLoggerContextSelector将确保所有记录器都是异步的，使用的机制与配置<asyncRoot> 或<asyncLogger>时的机制不同。
 log4j2.contextSelector=org.apache.logging.log4j.core.async.AsyncLoggerContextSelector
