update maven repository address

--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,7 @@ java {
 
 repositories {
     mavenLocal()
-    maven { url "http://maven.aliyun.com/nexus/content/groups/public/" }
+    maven { url "https://maven.aliyun.com/repository/public/" }
     mavenCentral()
 }
 
