--- a/src/main/resources/log4j2.component.properties
+++ b/src/main/resources/log4j2.component.properties
@@ -1,3 +1,4 @@
-# 当配置AsyncLoggerContextSelector作为全局异步日志时，请确保在配置中使用普通的 <root>和<logger>元素。
-# AsyncLoggerContextSelector将确保所有记录器都是异步的，使用的机制与配置<asyncRoot> 或<asyncLogger>时的机制不同。
+# utf-8
+# \u5F53\u914D\u7F6EAsyncLoggerContextSelector\u4F5C\u4E3A\u5168\u5C40\u5F02\u6B65\u65E5\u5FD7\u65F6\uFF0C\u8BF7\u786E\u4FDD\u5728\u914D\u7F6E\u4E2D\u4F7F\u7528\u666E\u901A\u7684 <root>\u548C<logger>\u5143\u7D20\u3002
+# AsyncLoggerContextSelector\u5C06\u786E\u4FDD\u6240\u6709\u8BB0\u5F55\u5668\u90FD\u662F\u5F02\u6B65\u7684\uFF0C\u4F7F\u7528\u7684\u673A\u5236\u4E0E\u914D\u7F6E<asyncRoot> \u6216<asyncLogger>\u65F6\u7684\u673A\u5236\u4E0D\u540C\u3002
 log4j2.contextSelector=org.apache.logging.log4j.core.async.AsyncLoggerContextSelector
