--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,6 +14,10 @@ logging:
   #自定义配置
   log4j2:
     level: info
-    max-file-size: 20MB
+    max-file-size: 20M
+    #日志滚动压缩数量,默认为7个,超过数量的会自动丢弃时间最早的日志
     max-history: 7
+    #immediateFlush 默认为true, false表示使用缓存，不立即写入文本，必须与异步日志配合使用提高性能
+    #若没开启异步日志，日志大小未达到缓存要求时停止应用，则日志丢失
+    immediateFlush: true
 
