--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,22 @@
-plugins {
-    id 'java'
-    id 'org.springframework.boot' version '2.7.18'
-    id 'io.spring.dependency-management' version '1.0.15.RELEASE'
+buildscript {
+    repositories {
+        mavenLocal()
+        maven { url "https://maven.aliyun.com/repository/public/" }
+    }
 }
 
+plugins {
+    id 'java'
+    id 'org.springframework.boot' version '3.3.4'
+    id 'io.spring.dependency-management' version '1.1.6'
+}
+
+
 group = 'net.hifor.demo'
-version = '0.0.1-SNAPSHOT'
+version = 'springboot3-20240925'
 
 java {
-    sourceCompatibility = JavaVersion.VERSION_11
+    sourceCompatibility = JavaVersion.VERSION_21
 }
 
 repositories {
@@ -35,7 +43,6 @@ dependencies {
             replacedBy("org.springframework.boot:spring-boot-starter-log4j2", "Use Log4j2 instead of Logback")
         }
     }
-    implementation ('org.apache.logging.log4j:log4j-spring-boot')
     implementation 'com.lmax:disruptor:3.4.4'
 
 
